Work on automated tests.