@@ -93,10 +93,43 @@
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+			<id>it</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<version>3.0.0-M3</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>integration-test</goal>
+									<goal>verify</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<forkCount>1</forkCount>
+							<reuseForks>false</reuseForks>
+							<argLine><![CDATA[--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED]]></argLine>
+							<includes>
+								<include>**/*IT.java</include>
+							</includes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>com.puresoltechnologies.javafx</groupId>
+				<artifactId>charts</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>com.puresoltechnologies.javafx</groupId>
 				<artifactId>extensions</artifactId>
@@ -159,11 +192,6 @@
 			</dependency>
 			<dependency>
 				<groupId>org.openjfx</groupId>
-				<artifactId>javafx-controls</artifactId>
-				<version>11</version>
-			</dependency>
-			<dependency>
-				<groupId>org.openjfx</groupId>
 				<artifactId>javafx-graphics</artifactId>
 				<version>11</version>
 			</dependency>
@@ -180,38 +208,44 @@
 			</dependency>
 			<dependency>
 				<groupId>org.testfx</groupId>
-				<artifactId>testfx-junit</artifactId>
+				<artifactId>testfx-junit5</artifactId>
 				<version>${testfx.version}</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.junit.platform</groupId>
+				<artifactId>junit-platform-commons</artifactId>
+				<version>1.3.2</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.junit.platform</groupId>
 				<artifactId>junit-platform-launcher</artifactId>
-				<version>1.1.1</version>
+				<version>1.3.2</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
 				<artifactId>junit-jupiter-api</artifactId>
-				<version>5.1.1</version>
+				<version>5.3.2</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
 				<artifactId>junit-jupiter-engine</artifactId>
-				<version>5.1.1</version>
+				<version>5.3.2</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
 				<artifactId>junit-jupiter-params</artifactId>
-				<version>5.1.1</version>
+				<version>5.3.2</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.junit.vintage</groupId>
 				<artifactId>junit-vintage-engine</artifactId>
-				<version>5.1.1</version>
+				<version>5.3.2</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
@@ -270,7 +304,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.2</version>
+				<version>3.1.1</version>
 				<configuration>
 					<archive>
 						<index>true</index>
@@ -420,6 +454,7 @@
 		<module>workspaces</module>
 		<module>charts</module>
 		<module>tasks</module>
+		<module>test</module>
 		<module>showroom</module>
 	</modules>
 
